trunk/Archive2/0d/a14ff1cbb6d89d/output
main.cpp:21:9: error: no viable conversion from 'const __gnu_cxx::__normal_iterator<int *, std::vector<int, std::allocator<int> > >' to 'int'
    int max_length = std::max(std::max(headers.begin(), headers.end()), std::max(fields.begin(), fields.end()));
        ^            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
